--- a/Week1.html
+++ b/Week1.html
@@ -21,8 +21,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Week1.html">Week 1</a></li>
                 </ul>
-                <img class="Screen" src="Week1 .png" alt="Foto van Week 1">
+                <img class="Screen" src="Week1 .png">
             </div>
         </div>
     </body>
 </html>
+
