--- a/Week1.html
+++ b/Week1.html
@@ -5,10 +5,10 @@
     <title>HTML & CSS</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="assets/styles.css">
-    <link rel="stylesheet" href="assets/flexboxes.css">
-    <link rel="stylesheet" href="assets/nav.css">
-    <link rel="stylesheet" href="assets/typography.css">
+    <link rel="stylesheet" href="../assets/styles.css">
+    <link rel="stylesheet" href="../assets/flexboxes.css">
+    <link rel="stylesheet" href="../assets/nav.css">
+    <link rel="stylesheet" href="../assets/typography.css">
     
 </head>
     <body>
@@ -25,5 +25,6 @@
         </div>
     </body>
 </html>
+
 
 
