--- a/Week4.html
+++ b/Week4.html
@@ -5,10 +5,10 @@
     <title>HTML & CSS</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="assets/styles.css">
-    <link rel="stylesheet" href="assets/flexboxes.css">
-    <link rel="stylesheet" href="assets/nav.css">
-    <link rel="stylesheet" href="assets/typography.css">
+    <link rel="stylesheet" href="../assets/styles.css">
+    <link rel="stylesheet" href="../assets/flexboxes.css">
+    <link rel="stylesheet" href="../assets/nav.css">
+    <link rel="stylesheet" href="../assets/typography.css">
     
 </head>
 <body>
@@ -48,3 +48,4 @@
     </div>
 </body>
 </html>
+
